fix: save summary discs
