# backend/router/discussion_auth.go
@@ -698,7 +698,7 @@ func (d *discussionAuth) CreateOrLastSession(ctx *context.Context) {
 // @Tags discussion
 // @Produce json
 // @Param ask_session_id path string true "ask_session_id"
-// @Success 200 {object} context.Response{data=model.ListRes{items=[]model.AskSession}}
+// @Success 200 {object} context.Response{data=model.ListRes{items=[]model.AskSession{summary_discs=[]model.AskSessionSummaryDisc}}}
 // @Router /discussion/ask/{ask_session_id} [get]
 func (d *discussionAuth) AskHistory(ctx *context.Context) {
 	res, err := d.disc.AskHistory(ctx, ctx.Param("ask_session_id"), ctx.GetUser().UID)
